<resources>
    <string name="app_name">Samadhan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">Logout</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="add_asset">Add Asset</string>
    <string name="asset_list">Asset List</string>
    <string name="edit_asset">Edit Asset</string>
    <string name="asset_category">Asset Category<font color="#FF0000" > *</font></string>
    <string name="primary_information">Primary Information</string>
    <string name="asset_type">Asset Type<font color="#FF0000" > *</font></string>
    <string name="cpu_brand">CPU Brand</string>
    <string name="cpu_model">CPU Model</string>
    <string name="cpu_serial_no">CPU Serial No.</string>
    <string name="monitor_brand">Monitor Brand</string>
    <string name="monitor_model">Monitor Model</string>
    <string name="monitor_serial_no">Monitor Serial No.</string>
    <string name="keyboard_type">Keyboard Type</string>
    <string name="keyboard_brand">Keyboard Brand</string>
    <string name="keyboard_model">Keyboard Model</string>
    <string name="keyboard_serial_no">Keyboard Serial No.</string>
    <string name="mouse_type">Mouse Type</string>
    <string name="mouse_brand">Mouse Brand</string>
    <string name="mouse_model">Mouse Model</string>
    <string name="mouse_serial_no">Mouse Serial No.</string>
    <string name="technical_configuration">Technical Configuration</string>
    <string name="processor">Processor</string>
    <string name="processor_type">Processor Type</string>
    <string name="ram_capacity">RAM Capacity (GB)</string>
    <string name="hard_disk_type">Hard Disk Type</string>
    <string name="hdd_in_gb">HDD1 Capacity</string>
    <string name="ssd_in_gb">SSD1 Capacity</string>
    <string name="purchase_information">Purchase Information</string>
    <string name="purchase_date">Invoice Date</string>
    <string name="select_date">select date</string>
    <string name="cpu_warranty_upto">Warranty Up to</string>
    <string name="monitor_warranty_upto">Monitor Warranty Up to</string>
    <string name="keyboard_warranty_upto">Keyboard Warranty Up to</string>
    <string name="mouse_warranty_upto">Mouse Warranty Up to</string>
    <string name="price">Price</string>
    <string name="vendor">Vendor<font color="#FF0000" > *</font></string>
    <string name="deployment_information">Deployment Information</string>
    <string name="intallation_date">Intallation Date<font color="#FF0000" > *</font></string>
    <string name="installation_location">Installation Location<font color="#FF0000" > *</font></string>
    <string name="department">Department<font color="#FF0000" > *</font></string>
    <string name="section">Section<font color="#FF0000" > *</font></string>
    <string name="custodian">Custodian<font color="#FF0000" > *</font></string>
    <string name="network_information">Network Information</string>
    <string name="network_type">Network Type</string>
    <string name="mac_address_ethernet">Ethernet MAC Address</string>
    <string name="mac_address_wifi">WiFi MAC Address</string>
    <string name="connection_type">Connection Type</string>
    <string name="ip_address">IP Address</string>
    <string name="subnet_mask">Subnet Mask Address</string>
    <string name="gateway">Gateway Address</string>
    <string name="software_information">Software Information</string>
    <string name="operating_system">Operating System</string>
    <string name="antivirus_make">Antivirus Make</string>
    <string name="antivirus_install_date">Antivirus Install Date</string>
    <string name="antivirus_reneuwal">Antivirus Renewal</string>
    <string name="antivirus_serial_no">Antivirus Serial No.</string>
    <string name="browser">Browsers</string>
    <string name="other_software">Other Softwares</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="brand">Brand<font color="#FF0000" > *</font></string>
    <string name="model">Model<font color="#FF0000" > *</font></string>
    <string name="serial_no">Serial Number<font color="#FF0000" > *</font></string>
    <string name="alert_exit">Do you want to exit?</string>
    <string name="confirmVisit_message">Are you sure? You want to confirm your scheduled visit?</string>
    <string name="invoice_no">Invoice No.</string>
    <string name="serial_number_photo">Serial Number Photo</string>
    <string name="monitor_serial_number_photo">Monitor Serial Number Photo</string>
    <string name="key_serial_number_photo">Keyboard Serial Number Photo</string>
    <string name="mouse_serial_number_photo">Mouse Serial Number Photo</string>
    <string name="take_serial_no_photo">Attach Serial Number Photo</string>
    <string name="take_monitor_serial_no_photo">Attach Monitor Serial Number Photo</string>
    <string name="take_keyboard_serial_no_photo">Attach Keyboard Serial Number Photo</string>
    <string name="take_mouse_serial_no_photo">Attach Mouse Serial Number Photo</string>
    <string name="asset_photo">Asset Photo</string>
    <string name="take_asset_photo">Attach Asset Photo</string>
    <string name="ticket_status">Ticket Status</string>
    <string name="title_activity_view_ticket">ViewTicketActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_you_need_to_know_about_samadhaan">All you need to\nknow about</string>
    <string name="remarks">Remarks</string>
    <string name="hardware">Hardware</string>
    <string name="software">Software</string>
    <string name="profile">Profile</string>
    <string name="deploy_asset">Deploy Asset</string>
    <string name="select_category">Category<font color="#FF0000" > *</font></string>
    <string name="precise_location">Precise Location</string>
    <string name="app_version">App Version : </string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="asset_classification">Asset Classification<font color="#FF0000" > *</font></string>
    <string name="asset">Asset<font color="#FF0000" > *</font></string>
    <string name="new_asset_quantity">New Asset Quantity<font color="#FF0000" > *</font></string>
    <string name="primary_location">Primary Location<font color="#FF0000" > *</font></string>
    <string name="secondary_location">Secondary Location<font color="#FF0000" > *</font></string>
    <string name="storage_type">Storage Type<font color="#FF0000" > *</font></string>
    <string name="comment_note">Comment/Note<font color="#FF0000" > *</font></string>
    <string name="estimated_date_to_resolve">Estimated date to resolve<font color="#FF0000" > *</font></string>
    <string name="estimated_time_to_resolve">Estimated time to resolve<font color="#FF0000" > *</font></string>
    <string name="assign_to">Assign To<font color="#FF0000" > *</font></string>
    <string name="priority">Priority<font color="#FF0000" > *</font></string>
    <string name="select_issue">Select issue<font color="#FF0000" > *</font></string>
    <string name="enter_issue">Enter Issue<font color="#FF0000" > *</font></string>
    <string name="from_workshop">From Workshop<font color="#FF0000" > *</font></string>
    <string name="send_to">Send to<font color="#FF0000" > *</font></string>
    <string name="mode_of_transfer">Mode of transfer<font color="#FF0000" > *</font></string>
    <string name="packing_type">Packing Type<font color="#FF0000" > *</font></string>
    <string name="quantity">Quantity<font color="#FF0000" > *</font></string>
    <string name="receive_note">Receive Note<font color="#FF0000" > *</font></string>
    <string name="cancel_note">Cancel Note<font color="#FF0000" > *</font></string>
    <string name="dispatch_from">Dispatch from<font color="#FF0000" > *</font></string>
    <string name="dispatch_to">Dispatch to<font color="#FF0000" > *</font></string>
    <string name="closure_note">Closure Note<font color="#FF0000" > *</font></string>
    <string name="diagnosis_notes">Diagnosis Notes<font color="#FF0000" > *</font></string>
    <string name="cr_closure_remarks_for_user">CR Closure Remarks for User<font color="#FF0000" > *</font></string>
    <string name="cr_description">CR Description<font color="#FF0000" > *</font></string>
    <string name="resolution_note">Resolution Note<font color="#FF0000" > *</font></string>
    <string name="visit_date">Visit Date<font color="#FF0000" > *</font></string>
    <string name="subject">Subject<font color="#FF0000" > *</font></string>
    <string name="description">Description<font color="#FF0000" > *</font></string>
    <string name="affected_from_date">Affected from date<font color="#FF0000" > *</font></string>
    <string name="affected_from_time">Affected from time<font color="#FF0000" > *</font></string>
    <string name="affected_to_date">Affected to date<font color="#FF0000" > *</font></string>
    <string name="affected_to_time">Affected to time<font color="#FF0000" > *</font></string>
    <string name="visible_from_date">Visible from date<font color="#FF0000" > *</font></string>
    <string name="visible_from_time">Visible from time<font color="#FF0000" > *</font></string>
    <string name="visible_to_date">Visible to date<font color="#FF0000" > *</font></string>
    <string name="visible_to_time">Visible to time<font color="#FF0000" > *</font></string>
    <string name="cr_title">CR Title<font color="#FF0000" > *</font></string>
    <string name="withdraw_reason">Withdrawal Reason<font color="#FF0000" > *</font></string>
</resources>