<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/account_circle"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_changepass"
            android:icon="@drawable/ic_baseline_lock_open_24"
            android:title="Change Password" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help_svg"
            android:title="Help" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>