<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".addassetforms.DeployAssetFormActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_assetImage"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/desktop_windows" />

            <TextView
                android:id="@+id/tv_assetname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Asset Name"
                android:textAppearance="@style/desktop"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Service Type"
                        android:textAppearance="@style/label_text2"/>

                    <TextView
                        android:id="@+id/tv_seviceType"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="type"
                        android:textAppearance="@style/desktop16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="Asset Code"
                        android:textAppearance="@style/label_text2"/>

                    <TextView
                        android:id="@+id/tv_assetCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="code"
                        android:textAppearance="@style/desktop16sp"/>

                </LinearLayout>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_ticket_raise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/darkCardButton"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:cardElevation="5dp"
                app:cardCornerRadius="15dp">

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_assetType"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            app:hintTextColor="@color/color_green_dark"
            android:hint="@string/asset_type">

            <!--this is the actual edit text which takes the input-->
            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/dd_assetType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:inputType="none"
                android:textAppearance="@style/text"
                android:text="Select"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:hint="@string/intallation_date">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_installationDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/text"
                android:editable="false"
                android:inputType="none"
                android:drawableEnd="@drawable/ic_baseline_date_range_24"
                android:text="dd-mm-yyyy"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_location"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            app:hintTextColor="@color/color_green_dark"
            android:hint="@string/installation_location">

            <!--this is the actual edit text which takes the input-->
            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/dd_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/text"
                android:editable="false"
                android:inputType="none"
                android:text="Select"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_department"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            app:hintTextColor="@color/color_green_dark"
            android:hint="@string/department">

            <!--this is the actual edit text which takes the input-->
            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/dd_department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/text"
                android:editable="false"
                android:inputType="none"
                android:text="Select"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_section"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            app:hintTextColor="@color/color_green_dark"
            android:hint="@string/section">

            <!--this is the actual edit text which takes the input-->
            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/dd_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/text"
                android:editable="false"
                android:inputType="none"
                android:text="Select"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/il_custodian"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="visible"
            android:layout_marginStart="8dp"
            app:hintTextColor="@color/color_green_dark"
            android:hint="@string/custodian">

            <!--this is the actual edit text which takes the input-->
            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/dd_custodian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/text"
                android:editable="false"
                android:inputType="none"
                android:text="Select"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_spinnercustodian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/spinner_background"
            android:hint="Select custodian"
            android:textAppearance="@style/text"
            android:visibility="gone"
            android:padding="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/precise_loc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            android:hint="@string/precise_location">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_precise_loc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/text"
                android:maxLength="50"
                android:text=""/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_lable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Comment/Note"
            android:textAppearance="@style/ticket_1123"/>

        <EditText
            android:id="@+id/et_message"
            style="@style/EditTextStyleMobileNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter text here"
            android:lines="10"
            android:minLines="6"
            android:gravity="top|start"
            android:maxLines="10"
            android:maxLength="1000"
            android:layout_marginTop="5dp"
            android:inputType="textMultiLine"
            android:scrollbars="vertical" />

    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_login_button"
        android:text="Submit"
        android:layout_gravity="end"
        android:textAllCaps="false"
        android:textAppearance="@style/ticket_for"
        android:textColor="@color/white" />

</LinearLayout>